--- a/aMuse.UI/PlaylistPage.xaml
+++ b/aMuse.UI/PlaylistPage.xaml
@@ -9,25 +9,22 @@
       Title="PlaylistPage" Background="#FF363636">
 
     <Grid  Background="#FF363636">
-        <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
-            <ListBox Style="{StaticResource {x:Type ListBox}}" MouseDoubleClick="ListTracks_MouseDoubleClick" Margin="15 0 15 0" x:Name="ListTracks" HorizontalContentAlignment="Stretch" Background="#FF363636" BorderBrush="#FF363636">
-                <ListBox.ItemTemplate  >
-                    <DataTemplate >
-                        <Grid  HorizontalAlignment="Stretch" Background="#FF363636">
+        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll = "True" Margin="0 0 0 0" Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
+            <ListBox   Margin="0 0 9 -1" x:Name="ListTracks" MouseDoubleClick="ListTracks_MouseDoubleClick"  Grid.IsSharedSizeScope="True" FontWeight="Normal">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition MinWidth="200" Width="Auto"/>
-                                <ColumnDefinition MinWidth="200" Width="Auto" />
-                                <ColumnDefinition MinWidth="200" Width="Auto"/>
-                                <ColumnDefinition MinWidth="50" Width="Auto"/>
+                                <ColumnDefinition Width="Auto"  SharedSizeGroup="Column1"/>
+                                <ColumnDefinition Width="Auto"  SharedSizeGroup="Column2"/>
+                                <ColumnDefinition Width="Auto"  SharedSizeGroup="Column3"/>
+                                <ColumnDefinition   />
                             </Grid.ColumnDefinitions>
-                            <TextBlock TextTrimming="WordEllipsis"   Margin="0 0 15 0" Grid.Column="0" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="{Binding Track}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
-                            <TextBlock TextTrimming="WordEllipsis"  Margin="0 0 15 0" Grid.Column="1" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="ALBUM NAME MuSt Be HeRe" FontWeight="Bold" Foreground="#FFDCFAFA"/>
-                            <TextBlock TextTrimming="WordEllipsis"  Margin="0 0 15 0" Grid.Column="2" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="{Binding Artist}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
-                            <Image  Width="36" Height="36"  MouseLeftButtonDown="ClickDeleteFromFavorites" 
-                         Grid.Column="3" Grid.RowSpan="2" Source="Icons/Cross_52px.png"/>
+                            <TextBlock MaxWidth="350"  TextTrimming="WordEllipsis" Margin="0 0 10 0" Grid.Column="0" Text="{Binding Track}" FontSize="20" Foreground="#FFDCFAFA"/>
+                            <TextBlock MaxWidth="400" Margin="0 0 10 0" Grid.Column="2" Text="Album must be here" FontSize="20" Foreground="#FFDCFAFA"/>
+                            <TextBlock  MaxWidth="400" Margin="0 0 10 0" Grid.Column="1" Text="{Binding Artist}" FontSize="20" Foreground="#FFDCFAFA"/>
+                            <Image Margin="10 0 0 0"  Height="20" VerticalAlignment="Center"  Width="20" 
+                                       HorizontalAlignment="Right"  MouseLeftButtonDown="DeleteTrackFromPlaylist" Grid.Column="3" Source="Icons/Cross_52px.png" x:Name="deleteIcon"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
