--- a/aMuse.UI/PlaylistsPage.xaml
+++ b/aMuse.UI/PlaylistsPage.xaml
@@ -13,7 +13,7 @@
             <RowDefinition/>
             <RowDefinition  Height="auto"/>
         </Grid.RowDefinitions>
-        <ScrollViewer Grid.Row="0" Margin="0 0 0 0" Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
+        <ScrollViewer Grid.Row="0" Margin="0 0 0 0" VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
             <ListBox  Margin="0 0 7 -1" x:Name="listPlaylists" MouseDoubleClick="ListTracks_MouseDoubleClick"  Grid.IsSharedSizeScope="True" FontWeight="Normal">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
