--- a/aMuse.UI/App.xaml
+++ b/aMuse.UI/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="aMuse.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:aMuse"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:aMuse">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
