--- a/aMuse.UI/AddPlaylist.xaml
+++ b/aMuse.UI/AddPlaylist.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aMuse.UI"
         mc:Ignorable="d"
-        Title="AddPlaylist" Height="250" Width="450" Background="#FF363636">
+        Title="New playlist" Icon="Icons/Metal.png" Height="250" Width="450" Background="#FF363636" Closed="Window_Closed">
     <Grid    >
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBox  VerticalContentAlignment="Center" Height="40" Name="textBoxName" Foreground="#7EDCFAFA" Width="200" FontSize="20" VerticalAlignment="Center"  Grid.ColumnSpan="3" Background="#FF707070" SelectionBrush="{x:Null}" Style="{DynamicResource TextBoxCustom}" BorderBrush="#FF404040" >
-            Playlist name
+            My playlist
             <!--GotFocus="textBoxPassword_GotFocus"-->
         </TextBox>
         <StackPanel   Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Grid.Row="4" Grid.ColumnSpan="2" Margin="2 2 2 10" Grid.RowSpan="2">
