--- a/aMuse.UI/MainPage.xaml
+++ b/aMuse.UI/MainPage.xaml
@@ -16,7 +16,7 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -25,8 +25,11 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Style="{DynamicResource ResourceKey=ClassicWithBorders}" Width="50" Height="50" Click="Button_ClickToLyrics" Grid.Row="1" Grid.RowSpan="2"  Grid.Column="3">
-            <Image  x:Name="imageInside" Source="Icons/Lyrics.png"  />
+        <Button  Style="{DynamicResource ResourceKey=FlatWithoutBorders}" Cursor="Hand" Margin="0 0 25 0" VerticalAlignment="Top" HorizontalAlignment="Right"  Width="50" Height="50" Click="Button_ClickToLyrics" Grid.Row="1" Grid.RowSpan="2"  Grid.Column="3">
+            <Image  x:Name="imageInside" Source="Icons/LyricsPro.png"  />
+        </Button>
+        <Button  Style="{DynamicResource ResourceKey=FlatWithoutBorders}" Cursor="Hand" Margin="25 0 0 0" VerticalAlignment="Top" HorizontalAlignment="Left"  Width="70" Height="55" Click="Button_ClickToInfo" Grid.Row="1" Grid.RowSpan="2"  Grid.Column="0">
+            <Image  x:Name="artistInfoIcon" Source="Icons/Info.png"  />
         </Button>
         <Button Visibility="Hidden" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0"/>
         <Image  Width="350" Height="350"  x:Name="AlbumCover"
