--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -68,15 +68,16 @@
                     Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3"  BorderThickness="0"
                     Name="TrackBar" PreviewMouseLeftButtonDown="TrackBar_PreviewMouseLeftButtonDown"
                     PreviewMouseLeftButtonUp="TrackBar_PreviewMouseLeftButtonUp" IsEnabled="False"/>
-            <StackPanel Margin="15 10 0 0" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" MaxWidth="200" MinWidth="100">
+            <StackPanel Margin="15 10 0 0" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" MaxWidth="250" MinWidth="100">
                 <TextBlock Name="textBlockTime" Text="00:00" FontSize="15" Foreground="#FFDCFAFA"/>
                 <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxTrackName" 
-                           TextWrapping="Wrap" Text="Title" Height="23" MaxWidth="110" Width="auto" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA" >
+                           TextWrapping="Wrap" Text="Title" Height="23"  Width="130" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA" >
                     <TextBlock.ToolTip>
                         <ToolTip x:Name="toolTipTrack" ToolTip.Opened="ToolTipTrack_Opened" Background="#FF767676" Foreground="#FFDCFAFA" HasDropShadow="False" FontWeight="Bold" FontSize="14" Placement="Relative" HorizontalOffset="25" VerticalOffset="10" BorderBrush="{x:Null}" />
                     </TextBlock.ToolTip>
                 </TextBlock>
-                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxArtist" TextWrapping="Wrap" Text="Artist" Height="23" MaxWidth="110"  Width="auto" FontSize="14"  Foreground="#FFDCFAFA">
+                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxArtist" 
+                           TextWrapping="Wrap" Text="Artist" Height="23"   Width="130" FontSize="14"  Foreground="#FFDCFAFA">
                     <TextBlock.ToolTip>
                         <ToolTip x:Name="toolTipArtist" ToolTip.Opened="ToolTipArtist_Opened" Background="#FF767676" Foreground="#FFDCFAFA" HasDropShadow="False"  FontSize="14" Placement="Relative" HorizontalOffset="25" VerticalOffset="10" BorderBrush="{x:Null}" />
                     </TextBlock.ToolTip>
