--- a/aMuse.UI/PlaylistPage.xaml
+++ b/aMuse.UI/PlaylistPage.xaml
@@ -22,7 +22,7 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock   TextTrimming="WordEllipsis" Margin="0 0 20 0" Grid.Column="0" Text="{Binding Track}" FontSize="20" Foreground="#FFDCFAFA"/>
                             <TextBlock  Margin="0 0 20 0" Grid.Column="1" Text="{Binding Artist}" FontSize="20" Foreground="#FFDCFAFA"/>
-                            <TextBlock  Margin="0 0 20 0" Grid.Column="2" Text="Album must be here" FontSize="20" Foreground="#FFDCFAFA"/>
+                            <TextBlock  Margin="0 0 20 0" Grid.Column="2" Text="{Binding Album}" FontSize="20" Foreground="#FFDCFAFA"/>
                             <Image Margin="0 0 0 0"  Height="20" VerticalAlignment="Center"  Width="20" 
                                          MouseLeftButtonDown="DeleteTrackFromPlaylist" Grid.Column="3" Source="Icons/Cross_52px.png" x:Name="deleteIcon"/>
                         </Grid>
