--- a/aMuse.UI/MainPage.xaml
+++ b/aMuse.UI/MainPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:aMuse.UI"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="700"
-      Title="MainPage" Loaded="Page_Loaded">
+      Title="MainPage">
 
     <Grid>
         <Grid.Background>
